--- a/HelloAndroid/res/values/strings.xml
+++ b/HelloAndroid/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="HelloAndroid_Hello">Hello World, HelloAndroid!</string>
+    <string name="HelloAndroid_ButtonHelloWifi">HelloWIfi</string>
     <string name="app_name">HelloAndroid</string>
+    <string name="WifiHelloAndroidScanResult_Ssid">ssid</string>
+    <string name="WifiHelloWifi_WifiNotFound">Wifi not found</string>
 </resources>
